# Graphics-Project-1

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: hdr.frag.glsl  hpbar.frag.glsl  hpbar.vert.glsl  simple.vert.glsl  star.frag.glsl  star.vert.glsl
src/: airplane.cpp  airplane.h  background.cpp  background.h  backgroundsystem.cpp  backgroundsystem.h  components.cpp  components.h  ecsengine.cpp  ecsengine.h  enemy.cpp  enemy.h  enemysystem.cpp  enemysystem.h  entity.cpp  entity.h  house.cpp  house.h  hpbar.cpp  hpbar.h  hpbarshader.cpp  hpbarshader.h  main.cpp  models.h  physicssystem.cpp  physicssystem.h  playersystem.cpp  playersystem.h  pointdata.cpp  pointdata.h  pointshader.cpp  pointshader.h  projectilesystem.cpp  projectilesystem.h  rendersystem.cpp  rendersystem.h  scene.cpp  scene.h  scenesystem.cpp  scenesystem.h  (+7 more)
src/entitysystems/: backgroundsystem.cpp  backgroundsystem.h  enemysystem.cpp  enemysystem.h  physicssystem.cpp  physicssystem.h  playersystem.cpp  playersystem.h  projectilesystem.cpp  projectilesystem.h  rendersystem.cpp  rendersystem.h  scenesystem.cpp  scenesystem.h  shrapnelsystem.cpp  shrapnelsystem.h
src/graphics/: shader.cpp  texture.cpp  texture.h  vertexarray.cpp
